@@ -304,10 +304,14 @@ class ConfigUtil(object):
     def __getSecretValue(self, name, val, sectionName, tokenName):
         try:
             hexKey = self.getEnvValue(tokenName, sectionName=sectionName)
+            if not hexKey:
+                logger.error("Empty key for token %r processing %r and %r", tokenName, name, val)
+            else:
+                logger.error("Bad key (%d) for token %r processing %r and %r", len(hexKey), tokenName, name, val)
             val = self.__decryptMessage(val, hexKey)
             hexKey = None
         except Exception as e:
-            logger.error("Failing processing %s secret value with %s", name, str(e))
+            logger.error("Failing processing %s using %r secret value with %s", name, tokenName, str(e))
         return val
 
     def getSecret(self, name, default=None, sectionName=None, tokenName="CONFIG_SUPPORT_TOKEN"):
