@@ -19,3 +19,4 @@
 30-Aug-2019  - V0.24 Make the default for yaml roundrip False
 23-Nov-2019  - V0.25 Update pipeline to py38
 14-Dec-2019  - V0.26 Report missing environmental variable lookups as errors.
+14-Dec-2019  - V0.27 Improve error reporting for key processing
